# flat-constraint-mev-solver

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TECHNICAL.md  promocion.md
benches/: solver_benchmark.rs
examples/: simple_arbitrage.rs  triangular_arbitrage.rs
src/: autogenesis.rs  espejo.rs  estres.rs  grafo.rs  lib.rs  main.rs  network_bridge.rs  quantum_jump.rs
tests/: test_speculam.rs
